assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');

html {
    scroll-behavior: smooth;
}

body {
    font-family: "Bree Serif", sans-serif;
    background-color: #e8dfc1;
}

/* -------navigation----*/
.navbar-custom {
    background: #ffa500;
}

.navbar .navbar-brand {
    font-size: 25px;
}

.navbar-nav .nav-link {
    font-size: 20px;
}

/* -------homelanding----*/
.hero-img {
    background: no-repeat;
    background: center;
    width: 100%;


}

/* -------About-page----*/
#About {
    width: 100%;
}

h1 {
    text-align: center;
    margin-top: 80px;
}

.rounded-circle {
    margin-top: 100px;
}

.overlay {
    width: 100%;
    height: 100%;
    top: 20px;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(255, 165, 0, 0.8);
    border-radius: 15px;
    z-index: 1;

}

/* -------Gallery-page----*/
#Gallery {
    width: 100%;
    padding-top: 60px;
}

h2 {
    text-align: center;

}

.carousel-caption {
    background: rgb(31, 36, 41,0.43);
    padding-top: 0;
}

/* -------Get Involved-page----*/
#Get-Involved {
    width: 100%;
}

#month-selector {
    margin-top: 18px;
}

#year-selector { 
    margin-top: 21px;

}

.duration {
    margin-top: 30px;
    height: 2rem;
}

.progress {
    margin-top: 10px;
    font-size: 1rem;
    margin-right: 65px;
    height: 2rem;
}

.text { 
    float: right;
    margin-left: 5px;
    margin-top: 15px ;
}

.food {
    margin-top: 50px;
}

.btn { 
    margin-left: 25%;
}

.structure {
    height:250px;
}

.frame {
    border: double;
    padding: 30px 0 50px;
    margin: 30px 0 50px;
}

input[required]{
    width: 60%;
    display: block;
    margin: auto;

}
.form-label {
    margin-left: 20%;
}
.btn-submit {
    margin-top: 30px;
    margin-left: 45%;


}

